<resources>
    <string name="app_name">散步城市</string>
    <string name="title_activity_maps">Walkable</string>
    <string name="home_title">散步城市</string>
    <string name="ranking_title">排名</string>
    <string name="favorite_title">收藏</string>
    <string name="event_title">活動</string>
    <string name="profile_title">個人</string>
    <string name="load_route">載入路線</string>
    <string name="detail_title">詳細資訊</string>
    <string name="rating_title">評分</string>
    <string name="badge_title">散策徽章</string>
    <string name="best_walker_title">散步好朋友</string>
    <string name="setting_title">個人設定</string>
    <string name="explore_title">行跡地圖</string>
    <string name="add_friend_event_title">邀請好友</string>

    <string name="enter_walkable">進入散步城市</string>
    <string name="load_other_route">載入其他路線</string>
    <string name="route_loaded">已繪製路線資訊</string>

    <string name="map_drawing">地圖繪製中，請稍後</string>

    <string name="start_walking">開始散步</string>
    <string name="end_walking">結束散步</string>
    <string name="pause_walking">暫停散步</string>
    <string name="resume_walking">繼續散步</string>
    <string name="walker_walking">散步囉！</string>

    <string name="search_destination">搜尋目的地</string>

    <string name="route_mine_title">我的路線</string>
    <string name="route_favorite_title">收藏路線</string>
    <string name="route_nearby_title">鄰近</string>

    <string name="select_route">選擇路線</string>

    <string name="filter_coverage">蔭</string>
    <string name="filter_vibe">逛</string>
    <string name="filter_tranquility">靜</string>
    <string name="filter_rest">歇</string>
    <string name="filter_snack">饞</string>
    <string name="filter_scenery">景</string>
    <string name="minute">分鐘</string>
    <string name="about_minute">約%.1f分鐘</string>
    <string name="filter_time_title">步行時間</string>
    <string name="shortest_time">最短時間</string>
    <string name="route_km">公里</string>

    <string name="send_filter">搜尋路線</string>

    <string name="no_direction_yet">還沒有選擇目的地歐</string>
    <string name="no_filter_yet">還沒有選擇路線類型歐</string>

    <string name="walker_timer">散步時間</string>
    <string name="walker_distance">散步旅程</string>
    <string name="approximate_time">約%.1f分</string>
    <string name="zero_time">00:00</string>
    <string name="zero_distance">0.000</string>
    <string name="approximate_length">約%.1f公里</string>
    <string name="recording_length">%.3f</string>

    <string name="finish_rating">完成評價</string>

    <string name="not_here">you are not suppose to be here</string>
    <string name="no_route_yet">目前無行跡路線</string>
    <string name="no_favs_route_yet">目前無收藏路線</string>
    <string name="no_route_nearby">附近無推薦路線</string>
    <string name="no_route_fit">無適合的推薦路線</string>


    <string name="no_internet">您尚未連接到網路</string>


    <string name="my_location">我的位置在這裡</string>

    <string name="permission_rational_location">是否同意提供位置資訊供記錄散步與搜尋使用?</string>
    <string name="ok">同意</string>
    <string name="cancel">不同意</string>
    <string name="permission_required_toast">要同意才能夠讓散步的體驗更好歐</string>

    <string name="rating_route_title">參考路線</string>
    <string name="rating_walk_route_title">行跡</string>

    <string name="no_rating_for_walk">不打算創建新路線</string>
    <string name="no_load_route">本次無載入路線</string>

    <string name="timer">時間</string>
    <string name="distance">旅程</string>

    <string name="create_route_interval">創建區段</string>
    <string name="create_route_title">主題</string>
    <string name="create_route_description">描述</string>
    <string name="share_photo">分享照片</string>
    <string name="rating">街道分數</string>
    <string name="rating_coverage">遮蔭：%d</string>
    <string name="rating_rest">歇腳：%d</string>
    <string name="rating_snack">好吃：%d</string>
    <string name="rating_vibe">好逛：%d</string>
    <string name="rating_tranquility">靜謐：%d</string>
    <string name="rating_scenery">景色：%d</string>
    <string name="comment">評論</string>

    <string name="input_title">輸入主題</string>
    <string name="input_description">輸入描述</string>
    <string name="input_comment">輸入評語</string>

    <string name="no_route_selected">您這次並未選擇載入路線</string>
    <string name="not_create_walk">您這次決定不創建路線</string>
    <string name="no_more_to_comment">您已評論完了歐</string>

    <string name="no_permission">您並未開啟位置權限</string>
    <string name="permission_again">開啟權限</string>

    <string name="not_complete_yet">路線項目尚未填寫完成</string>

    <string name="see_detail">詳細資訊</string>

    <string name="no_favorite_route">目前尚無收藏路線</string>

    <string name="back_to_route_list">回路線列表</string>

    <string name="detail_coverage">遮蔭|%.1f</string>
    <string name="detail_rest">歇腳|%.1f</string>
    <string name="detail_snack">好吃|%.1f</string>
    <string name="detail_vibe">好逛|%.1f</string>
    <string name="detail_tranquility">靜謐|%.1f</string>
    <string name="detail_scenery">景色|%.1f</string>


    <string name="event_popular_title">熱門</string>
    <string name="event_inviting_title">邀請</string>
    <string name="event_challenging_title">挑戰中</string>

    <string name="event_empty_popular">目前沒有熱門活動</string>
    <string name="event_empty_inviting">目前無被邀請的活動</string>
    <string name="event_empty_challenging">目前無挑戰中的活動</string>
    <string name="event_empty_after_filter">目前無相關中的活動</string>

    <string name="event_member_count">成員|%d</string>

    <string name="event_more_info">詳細資訊</string>

    <string name="event_filter">活動類型</string>
    <string name="event_all">全部活動</string>
    <string name="filter_frequency">習慣培養</string>
    <string name="filter_distance_group">距離合作</string>
    <string name="filter_distance_race">距離競賽</string>
    <string name="filter_hour_group">時間累計</string>
    <string name="filter_hour_race">時間競賽</string>

    <string name="create_event">建立活動</string>
    <string name="create_event_title">活動名稱｜</string>
    <string name="create_title_hint">不超過六個字歐</string>
    <string name="create_event_type">活動類型｜</string>

    <string name="select_event_type">請選擇活動類型</string>
    <string name="select_fr_type">頻率</string>
    <string name="select_start_date">請選擇開始日期</string>
    <string name="select_end_date">請選擇結束日期</string>

    <string name="frequency_hour_spinner">習慣培養(小時)</string>
    <string name="frequency_distance_spinner">習慣培養(公里)</string>

    <string name="create_event_frequency">次</string>
    <string name="create_event_frequency_title">挑戰頻率｜</string>
    <string name="create_event_frequency_each">挑戰每次｜</string>
    <string name="create_event_frequency_distance">公里</string>
    <string name="create_event_frequency_hour">小時</string>
    <string name="create_event_distance_title">挑戰距離｜</string>
    <string name="create_event_hour_title">挑戰小時｜</string>

    <string name="how_much">多少</string>


    <string name="create_event_start_date">開始日期｜</string>
    <string name="create_event_end_date">結束日期｜</string>
    <string name="create_event_description">活動敘述｜</string>
    <string name="create_description_hint">請描述活動</string>
    <string name="create_invite_friend">邀請好友｜</string>
    <string name="input_friend_id">請輸入好友&#032;ID</string>

    <string name="event_not_complete">尚未填寫完成歐</string>

    <string name="frequency_day">每天</string>
    <string name="frequency_week">每週</string>
    <string name="frequency_month">每月</string>

    <string name="set_public">設定為公開</string>

    <string name="walkable_city">散步城市</string>

    <string name="input_custom_id">請輸入您的ID</string>
    <string name="id_been_used">此id已被用過了歐</string>
    <string name="no_search_id">未輸入ID</string>
    <string name="add_friend">加入</string>
    <string name="add_friend_title">加朋友</string>

    <string name="input_friend_name">請輸入朋友的名字</string>
    <string name="no_such_friend">該朋友不存在</string>

    <string name="add_success">加入成功</string>
    <string name="add_failed">加入失敗，請稍後再試</string>
    <string name="already_friend">你們已經是朋友了歐</string>


    <string name="no_friend_for_now">您現在還沒有朋友歐</string>
    <string name="go_add_some_friend">前去加朋友</string>

    <string name="walk_update_error">散步更新未完成</string>




<!--    <profile page>-->
    <string name="walk_accumulate_title">累計｜</string>
    <string name="walk_accumulate_hours">%.2f小時｜</string>
    <string name="walk_accumulate_km">%.2f公里｜</string>

    <string name="setting_description">通知設定｜個人資訊</string>
    <string name="badge_description">您值得更多的勳章</string>
    <string name="explorer_description">用雙腳探索這個城市</string>
    <string name="friend_description">一起在城市中散步的好朋友們</string>


    <string name="event_detail_timer">距離結束時間｜</string>
    <string name="event_detail_pre_timer">距離開始時間｜</string>
    <string name="event_goal">目標｜</string>
    <string name="event_group_goal">共同目標｜</string>
    <string name="event_race_goal">競賽目標｜</string>

    <string name="accomplish_rate">%.1f％</string>
    <string name="no_destination_yet">尚未選擇目的地</string>
    <string name="no_route_fit_as_shortest">附近無推薦路線，提供給您最短路徑</string>
    <string name="days_left">%d天</string>

    <string name="walker_km">%.2f公里</string>
    <string name="walker_hour">%.2f小時</string>

    <string name="daily_ranking">本日排行</string>
    <string name="week_ranking">本週排行</string>
    <string name="month_ranking">本月排行</string>
    <string name="total_ranking">累計排行</string>

    <string name="accumulate_daily">本日累計｜</string>
    <string name="accumulate_weekly">本週累計｜</string>
    <string name="accumulate_monthly">本月累計｜</string>
    <string name="accumulate_yearly">今年累計｜</string>
    <string name="accumulate_total">總累計｜</string>

    <!--    <settings page>-->

    <string name="user_profile">個人資料</string>
    <string name="user_name">使用者</string>
    <string name="user_id">ID</string>
    <string name="user_email">Email</string>

    <string name="walk_record">散步紀錄</string>
    <string name="user_hour">散步小時</string>
    <string name="user_km">散步距離</string>

    <string name="today">本日</string>
    <string name="this_week">本週</string>
    <string name="this_month">本月</string>
    <string name="this_year">今年</string>
    <string name="total_walk">總計</string>

    <string name="notification_settings">通知設定</string>
    <string name="good_weather">好天氣</string>
    <string name="good_weather_on">好天氣通知開啟</string>
    <string name="good_weather_off">好天氣通知關閉</string>
    <string name="after_meal">晚飯後</string>
    <string name="after_meal_on">晚飯後通知開啟</string>
    <string name="after_meal_off">晚飯後通知關閉</string>

    <string name="empty_string"> </string>

    <!--    <badge page>-->

    <string name="badge">徽章</string>
    <string name="new_badge">新徽章</string>

    <string name="badge_hour_section">散策時間</string>
    <string name="badge_hour_0">開始散策</string>
    <string name="badge_hour_1">半個時辰</string>
    <string name="badge_hour_5">一晌午</string>
    <string name="badge_hour_10">走了十小時</string>
    <string name="badge_hour_50">持之以恆</string>
    <string name="badge_hour_100">散策達人</string>


    <string name="badge_km_section">散策旅程</string>
    <string name="badge_km_0">起步走</string>
    <string name="badge_km_3">走三千</string>
    <string name="badge_km_10">十里桃花</string>
    <string name="badge_km_80">兩次全馬</string>
    <string name="badge_km_350">台北到高雄</string>
    <string name="badge_km_1000">台灣繞一圈</string>

    <string name="badge_event_section">散步趣</string>
    <string name="badge_event_0">第一次</string>
    <string name="badge_event_3">揪三次</string>
    <string name="badge_event_10">揪十次</string>
    <string name="badge_event_25">揪很多</string>
    <string name="badge_event_50">說走揪走</string>
    <string name="badge_event_100">揪走達人</string>

    <string name="badge_friend_section">一起去散步</string>
    <string name="badge_friend_0">請不要說不</string>
    <string name="badge_friend_3">三人成群</string>
    <string name="badge_friend_10">打個全場</string>
    <string name="badge_friend_50">過了半百</string>
    <string name="badge_friend_100">百人齊步</string>
    <string name="badge_friend_300">三百步士</string>

    <string name="share_badge">分享徽章到</string>
    <string name="no_friend_invited">您尚未邀請任何好友歐</string>
    <string name="join_event">加入活動</string>

    <string name="invite_you">邀請您加入此活動</string>
    <string name="maybe_later">稍後再說</string>
    <string name="join_now">加入</string>

    <string name="will_you_create_route">想為此次的散步創建一個分享路線嗎?</string>
    <string name="will_create">好歐</string>
    <string name="will_not_create">不用了</string>

    <string name="recording">紀錄中</string>

    <string name="accomplishment">完成度</string>

    <string name="freepik">Icons made by FreePik from Flaticon</string>
    <string name="icon_geek_26">Icons made by Icongeek26 from Flaticon</string>

    <string name="day_number">第%d天</string>
    <string name="week_number">第%d週</string>
    <string name="month_number">第%d個月</string>

    <string name="good_weather_hour">本日好天氣</string>
    <string name="good_weather_content_hot">本日氣候炎熱，出門散步記得注意防曬歐！</string>
    <string name="good_weather_content_cold">本日氣侯寒冷，出門散步記得注意保暖歐！</string>
    <string name="feels_like">｜體感溫度</string>

    <string name="after_meal_walk">吃飽散步囉！</string>
    <string name="after_meal_talk">您已經%d天沒有出門散步了歐，\n來場探索城市的小旅行吧！</string>
    <string name="first_walk">吃飽喝足，一起出門散個步吧！</string>
    <string name="today_uvi">本日紫外線指數｜</string>
    <string name="uvi_very_strong">極強　%.2f</string>
    <string name="uvi_strong">強　%.2f</string>
    <string name="uvi_medium">中等　%.2f</string>
    <string name="uvi_weak">弱　%.2f</string>
    <string name="uvi_very_weak">微弱　%.2f</string>
    <string name="rain_percentage">｜降雨機率</string>

    <string name="explore_walk_distance">走了%.2f公里</string>

    <string name="day_night_switch">切換日夜模式</string>

    <string name="no_historic_data">尚無歷史資料</string>
    <string name="event_not_started">活動尚未開始</string>
    <string name="event_member">成員</string>



    <string name="badge_dialog_content">您有 %d 個新徽章歐！</string>
    <string name="badge_dialog_walk">解鎖 %d 個旅程徽章囉！</string>
    <string name="badge_dialog_event">解鎖 %d 個揪團徽章囉！</string>
    <string name="badge_dialog_friend">解鎖 %d 個朋友徽章囉！</string>
    <string name="go_to">前往散策徽章看看</string>

    <string name="destroy_walk_message">路線與紀錄都會不見歐</string>
    <string name="destroy_walk_title">確定要離開嗎?</string>
    <string name="keep_walking">繼續散步</string>
    <string name="keep_rating">留在此頁</string>
    <string name="confirm">確定</string>


</resources>
