...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ranking.RankingFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_route_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:routeItem="@{viewModel.routeList}" />

...
