...
                android:maxLength="15"
                android:text="@={viewModel.idCustom}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
...
